criação dos arquivos templates/bases/base_cadastros.html, templates/cadastros/index.html modificado README.md estrutura das pasta modificado main_route.py com mais uma route '/cadastro'. modifilcado requirements.txt

--- a/app/templates/cadastros/index.html
+++ b/app/templates/cadastros/index.html
@@ -1,10 +1,10 @@
-{% extends 'bases/base.html' %}
+{% extends 'bases/base_cadastros.html' %}
 
 {% block title %}Home page{% endblock %}
 
 {% block menu %}
 <ul>
-    <li><a href="/cadastros">Cadastros Itens</a> </li>
+    <li><a href="/cadastros/clubes">Cadastrar Clubes</a> </li>
 </ul>
 
 {% endblock %}
